Regresamos la seguridad, antes del despliegue
